tree fix bug add gap in example

--- a/src/assets/examples/tree-dynamic/tree-dynamic.component.css
+++ b/src/assets/examples/tree-dynamic/tree-dynamic.component.css
@@ -1,3 +1,7 @@
 .example-tree-progress-bar {
   margin-left: 30px;
 }
+
+.mat-tree {
+  margin-left: 56px;
+}
